<resources>
    <string name="app_name">Image Gallery</string>
    <string name="share_btn_text">Share</string>
    <string name="edit_btn_text">Edit</string>
    <string name="close_btn_text">Cancel</string>
    <string name="rotate_btn_text">Rotate</string>
    <string name="crop_btn_text">Crop</string>
    <string name="filter_btn_text">Filter</string>
    <string name="blur_btn_text">Blur</string>
    <string name="lable_btn_text">Library</string>
    <string name="gallery_btn_text">Gallery</string>
    <string name="filter1_btn_text">Gray</string>
    <string name="filter2_btn_text">Adjust</string>
    <string name="filter3_btn_text">Filter 3</string>
</resources>