<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.HomeActivity"
    android:background="@color/ColorBlack">

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="273dp"
            android:background="@drawable/blue_bg">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="93dp"
                android:src="@drawable/ic_baseline_photo_album_24" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnShare"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_baseline_share_24"
                    android:onClick="ShowPopup"/>

                <TextView
                    android:id="@+id/txtshare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/share_btn_text"
                    android:textColor="@color/ColorWhite"
                    android:fontFamily="@font/dancing_script_bold"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="50dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnEdit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_baseline_edit_24"/>

                <TextView
                    android:id="@+id/txtEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_btn_text"
                    android:textColor="@color/ColorWhite"
                    android:fontFamily="@font/dancing_script_bold"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="50dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLib"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/ic_baseline_browse_gallery_24"/>

                <TextView
                    android:id="@+id/txtLib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gallery_btn_text"
                    android:textColor="@color/ColorWhite"
                    android:fontFamily="@font/dancing_script_bold"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>