<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.EditActivity"
    android:background="@color/ColorBlack">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="5">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4.7">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBack"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_arrow_back_24"
                android:layout_gravity="left"
                android:layout_marginTop="5dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSave"
                android:layout_width="25dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_done_24"
                android:layout_gravity="right"
                android:layout_marginTop="5dp"/>

            <ImageView
                android:id="@+id/imageViewEdit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:id="@+id/layoutRotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_gravity="bottom">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnMinus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/ColorBlack"
                    android:text="-"
                    android:textColor="@color/ColorWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnPlus"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/ColorBlack"
                    android:text="+"
                    android:textColor="@color/ColorWhite"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnDone"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/ic_baseline_done_24"
                    android:gravity="center"/>

            </LinearLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:background="@drawable/ic_baseline_keyboard_arrow_left_24"/>

            <HorizontalScrollView
                android:id="@+id/menu"
                android:layout_width="0dp"
                android:layout_weight="2.6"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnRotate"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/ic_baseline_crop_rotate_24"/>

                        <TextView
                            android:id="@+id/rotateTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rotate_btn_text"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="10dp"
                            android:textColor="@color/ColorWhite"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="30dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnCrop"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/ic_baseline_crop_24"/>

                        <TextView
                            android:id="@+id/cropTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/crop_btn_text"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="10dp"
                            android:textColor="@color/ColorWhite"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="30dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnFilter"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/ic_baseline_filter_alt_24"/>

                        <TextView
                            android:id="@+id/filterTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filter_btn_text"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="10dp"
                            android:textColor="@color/ColorWhite"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="30dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnBlur"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/ic_baseline_blur_on_24"/>

                        <TextView
                            android:id="@+id/blurTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/blur_btn_text"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="10dp"
                            android:textColor="@color/ColorWhite"/>

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginLeft="30dp">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btnLable"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/ic_baseline_photo_library_24"/>

                        <TextView
                            android:id="@+id/lableTxt"
                            android:layout_width="35dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lable_btn_text"
                            android:fontFamily="@font/poppins_medium"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textSize="10dp"
                            android:textColor="@color/ColorWhite"/>

                    </LinearLayout>

                </LinearLayout>

            </HorizontalScrollView>

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                android:background="@drawable/ic_baseline_keyboard_arrow_right_24"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>